--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -12,6 +12,7 @@ html {
     font-family: 'Rubik', sans-serif;
     width: 100vw;
     overflow-x: hidden;
+    word-wrap: break-word;
 }
 
 body {
